add GetAppCostTimeRange api
